--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,6 +2,18 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
+# Alerting configuration
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+      # - alertmanager:9093
+
+# Rule files to load
+rule_files:
+  # - "first_rules.yml"
+  # - "second_rules.yml"
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
@@ -21,6 +33,36 @@ scrape_configs:
 
   - job_name: 'learners'
     static_configs:
-      - targets: ['learner-1:8080', 'learner-2:8080', 'learner-3:8080']
+      - targets: ['learner-1:8080', 'learner-2:8080']
         labels:
           group: 'learners'
+
+  - job_name: 'stores'
+    static_configs:
+      - targets: ['store-1:8080', 'store-2:8080', 'store-3:8080']
+        labels:
+          group: 'stores'
+          
+  - job_name: 'web-ui'
+    static_configs:
+      - targets: ['web-ui:80']
+        labels:
+          group: 'web-ui'
+          
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['localhost:9100']
+        labels:
+          group: 'node-exporter'
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['localhost:8080']
+        labels:
+          group: 'cadvisor'
+          
+  - job_name: 'grafana'
+    static_configs:
+      - targets: ['grafana:3000']
+        labels:
+          group: 'grafana'
