--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ store/store/__pycache__/
 proposer/proposer/__pycache__/
 learner/learner/__pycache__/
 acceptor/acceptor/__pycache__/
+.pytest_cache/
 .coverage*
-
