--- a/proposer/Dockerfile
+++ b/proposer/Dockerfile
@@ -2,28 +2,36 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Instalar utilitários
+# Install utilities
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-# Copiar os arquivos de requisitos
+# Copy requirements file
 COPY proposer/requirements.txt .
 
-# Instalar dependências
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código-fonte
-COPY proposer/ .
+# Create proper structure
+RUN mkdir -p /app/proposer
+
+# Copy code - make sure files go to right locations
+COPY proposer/__init__.py /app/proposer/
+COPY proposer/config.py /app/proposer/
+COPY proposer/persistence.py /app/proposer/
+COPY proposer/proposer.py /app/proposer/
+COPY proposer/leader.py /app/proposer/
+COPY proposer/main.py /app/
 COPY common/ /app/common/
 
-# Diretório para dados persistentes
+# Create data directory
 RUN mkdir -p /app/data
 VOLUME /app/data
 
-# Tornar o script de inicialização executável
+# Make startup script executable
 RUN chmod +x startup.sh
 
-# Expor a porta
+# Expose port
 EXPOSE 8080
 
-# Comando para iniciar a aplicação
+# Start command
 CMD ["./startup.sh"]
