--- a/proposer/requirements.txt
+++ b/proposer/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.95.2
+fastapi==0.95.1
 uvicorn==0.22.0
-aiofiles==23.1.0
+pydantic==1.10.7
+httpx==0.24.0
+python-dotenv==1.0.0
+aiodns==3.0.0
 aiohttp==3.8.4
-prometheus-client==0.17.0
-pydantic==1.10.8
