--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
+# File: .env
+# Arquivo de configuração de variáveis de ambiente
 NODE_ID=1
 PORT=8080
 DEBUG=true
+DEBUG_LEVEL=basic        # Valores possíveis: basic, advanced, trace
 ACCEPTORS=acceptor-1:8080,acceptor-2:8080,acceptor-3:8080,acceptor-4:8080,acceptor-5:8080
 PROPOSERS=proposer-1:8080,proposer-2:8080,proposer-3:8080,proposer-4:8080,proposer-5:8080
 LEARNERS=learner-1:8080,learner-2:8080
 STORES=cluster-store-1:8080,cluster-store-2:8080,cluster-store-3:8080
 USE_CLUSTER_STORE=false
+LOG_DIR=/data/logs       # Diretório para armazenar logs
