--- a/acceptor/Dockerfile
+++ b/acceptor/Dockerfile
@@ -6,14 +6,17 @@ FROM python:3.10-slim
 WORKDIR /app
 
 # Install dependencies
-COPY requirements.txt .
+COPY acceptor/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy source code
-COPY . .
+# Copy common modules
+COPY common /app/common
 
-# Create directory for persistent data
-RUN mkdir -p /data
+# Copy acceptor code
+COPY acceptor /app/acceptor
+
+# Create directories for persistent data and logs
+RUN mkdir -p /data /data/logs
 VOLUME /data
 
 # Environment configuration
@@ -22,9 +25,15 @@ ENV PYTHONUNBUFFERED=1
 ENV PORT=8080
 ENV NODE_ID=1
 ENV DEBUG=false
+ENV DEBUG_LEVEL=basic
+ENV LOG_DIR=/data/logs
+ENV DATA_DIR=/data
 
 # Expose port
 EXPOSE 8080
+
+# Working directory for execution
+WORKDIR /app/acceptor
 
 # Command to start the application
 CMD ["python", "main.py"]
