--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,21 +1,20 @@
-# Use a imagem base Python 3.10
 FROM python:3.10-slim
 
-# Diretório de trabalho
 WORKDIR /app
 
-# Instala dependências
-COPY requirements.txt .
+# Install dependencies
+COPY client/requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia todos os arquivos do cliente
-COPY . .
+# Copy code
+COPY client/ /app/
+COPY common/ /app/common/
 
-# Cria diretórios para dados persistentes e logs
+# Create persistent data and logs directories
 RUN mkdir -p /data /data/logs
 VOLUME /data
 
-# Configuração do ambiente
+# Environment configuration
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV CLIENT_ID=client-1
@@ -29,8 +28,8 @@ ENV LOG_DIR=/data/logs
 ENV NUM_OPERATIONS=0
 ENV AUTO_START=false
 
-# Expõe portas para API e servidor web
+# Expose ports for API and web server
 EXPOSE 8080 8081
 
-# Comando para iniciar a aplicação
+# Command to start the application
 CMD ["python", "main.py"]
