--- a/cluster_store/Dockerfile
+++ b/cluster_store/Dockerfile
@@ -1,22 +1,20 @@
-# Use a imagem base Python 3.10
 FROM python:3.10-slim
 
-# Diretório de trabalho
 WORKDIR /app
 
-# Instala dependências
-COPY requirements.txt .
+# Install dependencies
+COPY cluster_store/requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia o código-fonte
-COPY . /app/cluster_store
-COPY ../common /app/common
+# Copy code
+COPY cluster_store/ /app/cluster_store/
+COPY common/ /app/common/
 
-# Cria diretórios para dados persistentes e logs
+# Create persistent data and logs directories
 RUN mkdir -p /data/resources /data/logs
 VOLUME /data
 
-# Configuração do ambiente
+# Environment configuration
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV NODE_ID=1
@@ -26,8 +24,8 @@ ENV DEBUG_LEVEL=basic
 ENV DATA_DIR=/data/resources
 ENV LOG_DIR=/data/logs
 
-# Expõe a porta do servidor
+# Expose port
 EXPOSE 8080
 
-# Define o comando de entrada
+# Define entry command
 CMD ["python", "-m", "cluster_store.main"]
