--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - NODE_ID=1
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/proposer-1:/data
     ports:
@@ -22,7 +22,7 @@ services:
     environment:
       - NODE_ID=2
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/proposer-2:/data
     ports:
@@ -37,7 +37,7 @@ services:
     environment:
       - NODE_ID=3
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/proposer-3:/data
     ports:
@@ -52,7 +52,7 @@ services:
     environment:
       - NODE_ID=4
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/proposer-4:/data
     ports:
@@ -67,7 +67,7 @@ services:
     environment:
       - NODE_ID=5
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/proposer-5:/data
     ports:
@@ -83,7 +83,7 @@ services:
     environment:
       - NODE_ID=1
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/acceptor-1:/data
     ports:
@@ -98,7 +98,7 @@ services:
     environment:
       - NODE_ID=2
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/acceptor-2:/data
     ports:
@@ -113,7 +113,7 @@ services:
     environment:
       - NODE_ID=3
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/acceptor-3:/data
     ports:
@@ -128,7 +128,7 @@ services:
     environment:
       - NODE_ID=4
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/acceptor-4:/data
     ports:
@@ -143,7 +143,7 @@ services:
     environment:
       - NODE_ID=5
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
     volumes:
       - ./data/acceptor-5:/data
     ports:
@@ -159,7 +159,7 @@ services:
     environment:
       - NODE_ID=1
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - USE_CLUSTER_STORE=true
     volumes:
       - ./data/learner-1:/data
@@ -175,7 +175,7 @@ services:
     environment:
       - NODE_ID=2
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - USE_CLUSTER_STORE=true
     volumes:
       - ./data/learner-2:/data
@@ -192,7 +192,7 @@ services:
     environment:
       - NODE_ID=1
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - STORES=cluster-store-1:8080,cluster-store-2:8080,cluster-store-3:8080
     volumes:
       - ./data/cluster-store-1:/data
@@ -208,7 +208,7 @@ services:
     environment:
       - NODE_ID=2
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - STORES=cluster-store-1:8080,cluster-store-2:8080,cluster-store-3:8080
     volumes:
       - ./data/cluster-store-2:/data
@@ -224,7 +224,7 @@ services:
     environment:
       - NODE_ID=3
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - STORES=cluster-store-1:8080,cluster-store-2:8080,cluster-store-3:8080
     volumes:
       - ./data/cluster-store-3:/data
@@ -242,7 +242,7 @@ services:
       - CLIENT_ID=client-1
       - NODE_ID=1
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - PROPOSER=proposer-1:8080
       - NUM_OPERATIONS=20
       - AUTO_START=true
@@ -262,7 +262,7 @@ services:
       - CLIENT_ID=client-2
       - NODE_ID=2
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - PROPOSER=proposer-2:8080
       - NUM_OPERATIONS=20
       - AUTO_START=true
@@ -282,7 +282,7 @@ services:
       - CLIENT_ID=client-3
       - NODE_ID=3
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - PROPOSER=proposer-3:8080
       - NUM_OPERATIONS=20
       - AUTO_START=true
@@ -302,7 +302,7 @@ services:
       - CLIENT_ID=client-4
       - NODE_ID=4
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - PROPOSER=proposer-4:8080
       - NUM_OPERATIONS=20
       - AUTO_START=true
@@ -322,7 +322,7 @@ services:
       - CLIENT_ID=client-5
       - NODE_ID=5
       - DEBUG=true
-      - DEBUG_LEVEL=basic
+      - DEBUG_LEVEL=trace
       - PROPOSER=proposer-5:8080
       - NUM_OPERATIONS=20
       - AUTO_START=true
