--- a/.env
+++ b/.env
@@ -1,12 +1,16 @@
-# File: .env
-# Arquivo de configuração de variáveis de ambiente
-NODE_ID=1
-PORT=8080
-DEBUG=true
-DEBUG_LEVEL=basic        # Valores possíveis: basic, advanced, trace
-ACCEPTORS=acceptor-1:8080,acceptor-2:8080,acceptor-3:8080,acceptor-4:8080,acceptor-5:8080
-PROPOSERS=proposer-1:8080,proposer-2:8080,proposer-3:8080,proposer-4:8080,proposer-5:8080
-LEARNERS=learner-1:8080,learner-2:8080
-STORES=cluster-store-1:8080,cluster-store-2:8080,cluster-store-3:8080
-USE_CLUSTER_STORE=false
-LOG_DIR=/data/logs       # Diretório para armazenar logs
+# Variáveis de ambiente globais para o Paxos Consensus System
+
+# Debug mode (true/false)
+DEBUG=false
+
+# Tempo mínimo e máximo de espera entre pedidos dos clientes (segundos)
+CLIENT_MIN_WAIT=1.0
+CLIENT_MAX_WAIT=5.0
+
+# Número mínimo e máximo de pedidos a serem enviados pelos clientes
+CLIENT_MIN_REQUESTS=10
+CLIENT_MAX_REQUESTS=50
+
+# Tempo de expiração para detecção de falhas (segundos)
+HEARTBEAT_INTERVAL=5.0
+HEARTBEAT_TIMEOUT=15.0
