--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.95.0
-uvicorn==0.21.1
-aiohttp==3.8.4
+# Requisitos para o cliente Paxos
+fastapi==0.95.1
+uvicorn==0.22.0
 pydantic==1.10.7
+httpx==0.24.0
+python-dotenv==1.0.0
 jinja2==3.1.2
+aiodns==3.0.0
+aiohttp==3.8.4
 python-multipart==0.0.6
-websockets>=10.0
