--- a/learner/Dockerfile
+++ b/learner/Dockerfile
@@ -2,19 +2,34 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Instalar dependências
-COPY learner/requirements.txt .
+# Install dependencies
+COPY learner/requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código fonte
+# Copy code
 COPY learner/ /app/learner/
 COPY common/ /app/common/
 
-# Criar diretório de logs
-RUN mkdir -p /app/logs
+# Create persistent data and logs directories
+RUN mkdir -p /data /data/logs
+VOLUME /data
 
-# Configuração da porta
-EXPOSE 8200
+# Environment configuration
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV PORT=8080
+ENV NODE_ID=1
+ENV DEBUG=false
+ENV DEBUG_LEVEL=basic
+ENV LOG_DIR=/data/logs
+ENV DATA_DIR=/data
+ENV USE_CLUSTER_STORE=false
 
-# Comandos de execução
-CMD ["python", "-m", "learner.main"]
+# Expose port
+EXPOSE 8080
+
+# Set working directory
+WORKDIR /app/learner
+
+# Command to start the application
+CMD ["python", "main.py"]
