--- a/proposer/Dockerfile
+++ b/proposer/Dockerfile
@@ -2,19 +2,33 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Instalar dependências
-COPY proposer/requirements.txt .
+# Install dependencies
+COPY proposer/requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código fonte
+# Copy code
 COPY proposer/ /app/proposer/
 COPY common/ /app/common/
 
-# Criar diretório de logs
-RUN mkdir -p /app/logs
+# Create persistent data directory
+RUN mkdir -p /data
+VOLUME /data
 
-# Configuração da porta
-EXPOSE 8000
+# Environment configuration
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV PORT=8080
+ENV NODE_ID=1
+ENV DEBUG=false
 
-# Comandos de execução
-CMD ["python", "-m", "proposer.main"]
+# Adicionar diretório ao PYTHONPATH
+ENV PYTHONPATH="/app:${PYTHONPATH}"
+
+# Expose port
+EXPOSE 8080
+
+# Set working directory
+WORKDIR /app
+
+# Command to start the application
+CMD ["python", "proposer/main.py"]
